Another attempt to fix white space at the bottom of the page

--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -2,16 +2,15 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  font-family: 'Tangerine', cursive;
   width: 100vw;
   height: 100vh;
-  font-family: 'Tangerine', cursive;
 }
 
 .home::after {
   content: "";
-  background: url("../../Images/tlo.jpg");
+  background: url("../../Images/tlo.jpg") center center fixed;
   background-size: cover;
-  background-position: center center;
   background-repeat: no-repeat;
   opacity: 0.8;
   top: 0;
